pumps: Dummy support for pumps
Pumps will work much like heaters/vessels, but they will not actuate via
PWM like heaters do. Pumps will be on/off only.

Pumps will not (currently) have sensors associated. This will change in
the future, to allow pumps used for temperature control (for RIMS/HERMS
systems).

This is a dummy implementation, and it doesn't currently activate any
pump over GPIO.
